# Topper

./: CMakeLists.txt  README  README.md  topper.cpp
models/: complex1.off  cube.off  sphere.off
sample_outputs/: cube_I1_spherepack.stl  cube_I2_octtess.stl  cube_I3_rhomtess.stl  cube_I4_dynkowski.stl  cube_dynkowski_I4.stl  cube_octtess_I2.stl  cube_rhomtess_I3.stl  cube_spherepack_I1.stl
src/: VariableWrapper.h  configuration.scad  main.scad  topper.cpp  variables.scad  wrapper.py
src/infills/: dynkowski.scad  octtess.scad  rhomtess.scad  spherepack.scad
test_models/: complex1.scad  cube.scad  sphere.scad  tetrahedron.off  tetrahedron.scad
